<resources>
    <string name="app_name">App da Transparencia</string>
    <string name="search">Procurar</string>
    <string name="description">Descrição</string>
    <string name="type_the_agency_description">Digite a descrição para a busca</string>
    <string name="this_field_is_demanded">Este campo é necessário para a busca</string>
    <string name="federal_gov_agencies">Órgãos do Governo Federal</string>
    <string name="reading_page">Lendo página %d!</string>
    <string name="no_agencies_searched_or_found">Nenhuma agência buscada ou encontrada.\nUse o botão no canto inferior\npara pesquisar!</string>
    <string name="no_travels_searched_or_found">Nenhuma viagem buscada ou encontrada.\nUse o botão no canto inferior\npara pesquisar!</string>
    <string name="paged_to_end_please_re_search">Você atingiu a última página.\nPara outros resultados, pesquise denovo</string>
    <string name="type_the_info_needed_for_searching_travels">Digite os dados necessários para\na pesquisa de viagens.</string>
    <string name="date_input_example">ex.: 09/06/2018</string>
    <string name="field_out_of_range">Campo fora do limite máximo de 1 mes</string>
    <string name="field_in_wrong_format">Campo fora do formato</string>
    <string name="cost">$%f</string>
    <string name="travels_under">Viagens por %s</string>

    <string name="start_date_from">Data de ida de</string>
    <string name="start_date_until">Data de ida ate</string>
    <string name="end_date_from">Data de volta de</string>
    <string name="end_date_until">Data de volta ate</string>
</resources>
